@@ -24,7 +24,7 @@
 </thead><tbody>
 <tr>
 <td>2,000,000</td>
-<td></td>
+<td>-</td>
 <td>1,000</td>
 </tr>
 <tr>
