@@ -1,9 +1,21 @@
-<h1 id='intro'>Intro (개요)</h1>
+<h1 id='intro'>Intro (개요)</h1><h3 id='what-is-this'>What is This?</h3>
 <p><strong>Upbit(업비트) Cryptocurrency Exchange Open API Client of Multi-Programming Language Support</strong></p>
 
-<p>Upbit Client(업비트 클라이언트)는 업비트 OPEN API에 접근할 수 있는 인터페이스를 제공합니다.</p>
+<p>Upbit Client(업비트 클라이언트)는 Upbit(업비트) OPEN API에 접근할 수 있는 인터페이스를 제공합니다.</p>
 <h3 id='support'>Support</h3>
 <ul>
-<li><a href="https://docs.upbit.com/">Official Upbit OPEN API Documents</a></li>
-<li><a href="https://github.com/swagger-api">Swagger</a></li>
+  <li>
+    <b>
+      <a href="https://upbit.com/">
+        <img src="/images/upbit_favicon.png"> Upbit
+      </a>
+    </b>
+  </li>
+  <li>
+    <b>
+      <a href="https://github.com/swagger-api/">
+        <img src="/images/swagger_favicon.png"> Swagger
+      </a>
+    </b>
+  </li>
 </ul>
