@@ -3,7 +3,12 @@
 
 <p><strong>Upbit OPEN API Client 사용법과 설명에 대한 문서입니다.</strong></p>
 
-<p><a href="https://github.com/uJhin/upbit-client/releases">
+<p><a href="https://github.com/uJhin/upbit-client">
+  <img src="https://img.shields.io/github/stars/uJhin/upbit-client?style=social">
+  <img src="https://img.shields.io/github/forks/uJhin/upbit-client?style=social">
+</a>
+<br/>
+<a href="https://github.com/uJhin/upbit-client/releases">
   <img src="https://img.shields.io/github/v/release/uJhin/upbit-client"/>
 </a>
 <a href="https://github.com/uJhin/upbit-client/blob/main/LICENSE">
@@ -50,19 +55,19 @@
   </li>
   <li>
     <b>
-      Author Email: <code>ujhin942@gmail.com</code>
+      <img src="/images/email.png"> Author Email: <code>ujhin942@gmail.com</code>
     </b>
   </li>
   <li>
     <a href="https://docs.upbit.com/docs/">
       <b>
-        <img src="/images/favicon.ico"/> Official OPEN API
+        <img src="/images/upbit_favicon.png"/> Official OPEN API
       </b>
     </a>
   </li>
   <li>
     <b>
-      <img src="/images/favicon.ico"/> Official Support: <code>open-api@upbit.com</code>
+      <img src="/images/upbit_favicon.png"/> Official Support: <code>open-api@upbit.com</code>
     </b>
   </li>
 </ul>
