@@ -2,7 +2,7 @@
 <p>Update Client Released: v1.1.7.5</p>
 
 <ul>
-<li><code>UpbitWebSocket</code> 클래스 파라미터 오타 수정 <code>ping_inverval</code> -&gt; <code>ping_interval</code></li>
+<li><code>UpbitWebSocket</code> 클래스 파라미터 오타 수정: <code>ping_inverval</code> -&gt; <code>ping_interval</code></li>
 <li><code>UpbitWebSocket</code> 클래스 기능 추가: <code>socket.connect</code> 섹션 참고</li>
 <li>이전보다 원활한 패키지 버전 관리를 위해 <code>pkginfo.py</code> 모듈로 분리</li>
 <li>그 외 부분적인 소스 코드 리팩토링</li>
@@ -54,6 +54,7 @@
 <p>Update Upbit OPEN API</p>
 
 <ul>
+<li>Upbit OPEN API가 업데이트 됨에 따라 아래와 같이 변경되었습니다.</li>
 <li>주문 리스트 조회 (<strong>GET</strong> /v1/orders): <code>kind</code> 요청 파라미터 제거</li>
 <li>변경 결과: <code>normal</code> (일반 주문), <code>watch</code> (예약 주문) 동시 조회</li>
 </ul>
